// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineGridProgression renders 0 1`] = `
Array [
  .c0 {
  line-grid-progression: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridProgression renders function 1`] = `
Array [
  .c0 {
  line-grid-progression: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: has;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: has;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridProgression renders invalid theme path 1`] = `
Array [
  .c0 {
  line-grid-progression: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridProgression renders negative number 1`] = `
Array [
  .c0 {
  line-grid-progression: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridProgression renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    line-grid-progression: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-progression: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-progression: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-progression: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    line-grid-progression: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-progression: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-progression: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-progression: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-grid-progression: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-progression: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-progression: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-progression: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-grid-progression: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-progression: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-grid-progression: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-grid-progression: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridProgression renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    line-grid-progression: July;
  }
}

@media April {
  .c0 {
    line-grid-progression: August;
  }
}

@media January {
  .c0 {
    line-grid-progression: September;
  }
}

@media April {
  .c0 {
    line-grid-progression: November;
  }
}

@media June {
  .c0 {
    line-grid-progression: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    line-grid-progression: July;
  }
}

@media April {
  .c0 {
    line-grid-progression: August;
  }
}

@media January {
  .c0 {
    line-grid-progression: September;
  }
}

@media April {
  .c0 {
    line-grid-progression: November;
  }
}

@media June {
  .c0 {
    line-grid-progression: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-grid-progression: January;
  }
}

@media April {
  .c0 {
    line-grid-progression: December;
  }
}

@media January {
  .c0 {
    line-grid-progression: April;
  }
}

@media April {
  .c0 {
    line-grid-progression: May;
  }
}

@media June {
  .c0 {
    line-grid-progression: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-grid-progression: January;
  }
}

@media April {
  .c0 {
    line-grid-progression: December;
  }
}

@media January {
  .c0 {
    line-grid-progression: April;
  }
}

@media April {
  .c0 {
    line-grid-progression: May;
  }
}

@media June {
  .c0 {
    line-grid-progression: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridProgression renders postitive number 1`] = `
Array [
  .c0 {
  line-grid-progression: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridProgression renders string 1`] = `
Array [
  .c0 {
  line-grid-progression: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: June;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: June;
}

<div
    className="c0"
  />,
]
`;

exports[`lineGridProgression renders valid theme path 1`] = `
Array [
  .c0 {
  line-grid-progression: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-grid-progression: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
